--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: docker-watch-container
           image: docker-watch:latest
+          imagePullPolicy: IfNotPresent  # Set the image pull policy here
           ports:
             - containerPort: 8080
