--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,20 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
+    expose:
+      - 4000
+      - 9229  
     ports:
-      - 4000:4000        
-    x-develop: 
-      watch:          
-        - path: src/
-          target: /app/src/
+      - 4000:4000
+      - 9229:9229
+    develop:
+      watch:
+        - path: /src
+          target: /app/src
           action: sync
-    volumes:
-      - D:\docker-projects\docker-watch:/app     
+          ignore:
+            - "node_modules/"
+            - "Jenkinsfile"
+            - "Jenkins.Dockerfile"
+            - "*.md"
+            - "*.dockerfile"
