--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js"
+    "start": "nodemon ./src/server.js",
+    "debug": "nodemon --inspect-brk --inspect=0.0.0.0:9229 -L src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "@types/nodemon": "^1.19.5",
+    "chalk": "^4.1.2",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
