--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.17",
+    "@types/nodemon": "^1.19.6",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.1"
