--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^4.3.10",
     "chai-http": "^4.4.0",
     "chalk": "^4.1.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "loc": "^0.6.1",
