--- a/package.json
+++ b/package.json
@@ -12,24 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.3.11",
-    "@types/chai-http": "^4.2.0",
     "@types/chalk": "^2.2.0",
     "@types/express": "^4.17.17",
-    "@types/mocha": "^10.0.6",
     "@types/nodemon": "^1.19.6",
-    "@types/supertest": "^6.0.1",
-    "chai": "^4.3.10",
-    "chai-http": "^4.4.0",
     "chalk": "^4.1.2",
-    "cross-env": "^7.0.3",
     "express": "^4.18.2",
-    "loc": "^0.6.1",
-    "mocha": "^10.2.0",
-    "mocha-lcov-reporter": "^1.3.0",
-    "nodemon": "^3.0.1",
-    "nyc": "^15.1.0",
-    "supertest": "^6.3.3",
-    "ts-node": "^10.9.2"
+    "nodemon": "^3.0.1"
   }
 }
