--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -3,12 +3,10 @@ ENV NODE_ENV=production
 WORKDIR /app
 COPY . ./
 RUN npm install
-# EXPOSE 8080
 ENV NODE_ENV=production
 WORKDIR /app
 COPY . ./
 RUN npm install
 EXPOSE 4000
-# EXPOSE 9229
+EXPOSE 9229
 CMD ["npm", "start"]
-# CMD ["npm", "run", "debug"]
